--- a/soltaMeuFrango/index.html
+++ b/soltaMeuFrango/index.html
@@ -11,6 +11,11 @@
   <div id="jogo-container">
     <h1>🐔 Solta meu frango 🐔</h1>
 
+    <!-- Tela inicial -->
+    <div id="telaInicio" style="display:none; text-align:center;">
+      <button id="botao-iniciar">Iniciar</button>
+    </div>
+
     <div id="canvas-wrapper">
       <canvas id="jogoCanva"></canvas>
     </div>
@@ -18,7 +23,7 @@
     <div id="hud">
       <div class="hud-item"><span class="label">Pontuação:</span> <span id="score">0</span></div>
       <div class="hud-item"><span class="label">Melhor:</span> <span id="best">0</span></div>
-      <div class="hud-item"><span class="label">Estado:</span> <span id="state">Jogando</span></div>
+      <div class="hud-item"><span class="label">Estado:</span> <span id="state">Aguardando</span></div>
     </div>
 
     <div id="botoes">
@@ -32,7 +37,16 @@
       <p>
         <a href="https://github.com/Gabriel-duda1">GitHub - Gabriel Duda |</a>
         Desenho por - Samara Victoria
+        <button id="historia-btn">História</button>
       </p>
+      <!-- Caixa de história oculta -->
+      <div id="historia-box" style="display:none; margin-top:10px; background:#fffbe7; padding:10px; border:1px solid #333;">
+        <p>
+          Este jogo nasceu de uma brincadeira da faculdade, onde estávamos entre amigos se divertindo e do nada meu amigo decidiu pegar a lancheira da minha amiga Rebeka e sair correndo, 
+          com isso ela soltou a frase icônica "Solta meu frango", e a partir disso decidi criar um jogo baseado nessa frase, onde o objetivo é ajudar Rebeka a escapar dos obstáculos
+           e alcançar o frango. O jogo é uma homenagem a esse momento divertido e à amizade que compartilhamos. 
+        </p>
+      </div>
     </div>
   </footer>
 
